Fri Sep  9 13:50:05 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* doc/extension.rdoc, doc/extension.ja.rdoc: fix file name.
	  pointed out by @takkanm in the RubyKaigi talk.

Fri Sep  9 13:14:53 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* News: Announcing update to Unicode version 9.0.0 [ci skip]

Fri Sep  9 10:10:00 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* variable.c (rb_const_search): warn with the actual class/module
	  name which defines the deprecated constant.

	* variable.c (rb_const_search): raise with the actual class/module
	  name which defines the private constant.

Thu Sep  8 17:47:18 2016  Kazuki Tsujimoto  <kazuki@callcc.net>

	* array.c (flatten): use rb_obj_class instead of rb_class_of
	  because rb_class_of may return a singleton class.
	  [ruby-dev:49781] [Bug #12738]

Thu Sep  8 17:40:15 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/rbinstall.rb (gem): use the bindir of each gemspec instead
	  of hardcoded 'bin', since rdoc 5.0.0 overrides it.

Thu Sep  8 16:47:03 2016  Shugo Maeda  <shugo@ruby-lang.org>

	* eval.c (rb_mod_s_used_modules): rename Module.used_refinements to
	  Module.used_modules.  [Feature #7418] [ruby-core:49805]

Thu Sep  8 14:21:48 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* ext/psych/psych.gemspec, lib/rdoc/rdoc.gemspec: Use file list instead of
	  git output. It shows warning message when invoke `make install`
	  [Bug #12736][ruby-dev:49778]

Thu Sep  8 13:41:46 2016  Shugo Maeda  <shugo@ruby-lang.org>

	* insns.def (setclassvariable, setconstant): warn when self is a
	  refinement.  [Bug #10103] [ruby-core:64143]

Thu Sep  8 11:29:00 2016  Kenta Murata  <mrkn@mrkn.jp>

	* hash.c (rb_hash_transform_values, rb_hash_transform_values_bang):
	  Rename map_v to transform_values.
	  [Feature #12512] [ruby-core:76095]

	* test/ruby/test_hash.rb: ditto.

Thu Sep  8 10:08:35 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* {ext,test}/openssl: Import Ruby/OpenSSL 2.0.0.beta.2. The full commit